No longer needed to doubleclick link on weird cases, added padding on mobile views

--- a/themes/finna2/less/finna/feed.less
+++ b/themes/finna2/less/finna/feed.less
@@ -118,6 +118,7 @@
         }   
         & a.carousel-link {
             position: absolute;
+            text-decoration: underline;
             bottom: 0px;
             width: 100%;
             font-weight: bold;
@@ -127,6 +128,10 @@
             padding: 5px 10px;
             box-shadow: 0px -11px 20px -9px black;
             color: @carousel-slide-link-color;
+            
+            @media (max-width: @screen-sm) {
+                padding: 15px 10px;
+            }
         }
     }
 
